--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,python,flask,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,python,flask,visualstudiocode
 
+## DB ##
+database.db
+
 ### Flask ###
 instance/*
 !instance/.gitignore
